# SonicForgeStudio

./: .gitignore  AGENTS.md  BUILD_VERIFICATION.md  CONTRIBUTING.md  Cargo.toml  FILE_MANIFEST.json  LICENSE  MODEL_ROUTING.md  README.md  TEAM.md  THIRD_PARTY_NOTICES.md  architecture.md  audio-engine.md  final.md  plan.md  project-format.md  references.md  risk-register.md  roadmap.md  security.md  spec.md  test.md  todos.md  ui-design.md
.codex/evolution/state/: CODEX_STATE.md
.github/workflows/: ci.yml  release.yml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/cli/tests/: demo_smoke.rs
apps/desktop/: eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts
apps/desktop/src/: App.test.tsx  App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/components/: AudioSettingsDialog.tsx  PianoRoll.test.tsx  PianoRoll.tsx  ProjectControls.test.tsx  ProjectControls.tsx  StepSequencer.test.tsx  StepSequencer.tsx  TemplateGallery.tsx  stepSequencerModel.ts
apps/desktop/src/i18n/: I18nContext.tsx  context.ts  i18n.test.ts  index.ts  storage.ts  translate.ts  types.ts
apps/desktop/src/i18n/dictionaries/: en.ts  index.ts  ja.ts  ko.ts  zh-TW.ts
apps/desktop/src/lib/: history.test.ts  history.ts  instruments.test.ts  instruments.ts  pianoRoll.ts  tauri.ts  templates.test.ts  templates.ts  transportTime.test.ts  transportTime.ts
apps/desktop/src/test/: setup.ts
apps/desktop/tests/: app.spec.ts
crates/sonicforge-audio/: Cargo.toml
crates/sonicforge-audio/src/: lib.rs
crates/sonicforge-core/: Cargo.toml
crates/sonicforge-core/src/: lib.rs  project.rs  render.rs  sequence.rs  synth.rs  wav.rs
crates/sonicforge-io/: Cargo.toml
crates/sonicforge-io/src/: journal.rs  lib.rs  midi.rs
crates/sonicforge-io/tests/golden/: midi_type0.hex  midi_type1.hex  project-v1.json
docs/: ADR-0001-clean-room.md  ADR-0002-tauri-rust-engine.md  acceptance-checklist.md  signing.md
prompts/: START_CODEX.md  START_OPENCODE.md
prototype/: ui-mockup.html
schemas/: project-v1.schema.json  recipe-v1.schema.json
scripts/: build-release.ps1  build-release.sh  check.ps1  check.sh  package.ps1  package.sh  sign-windows.ps1  sign-windows.tests.ps1
