[workspace]
members = [
    "crates/sonicforge-core",
    "crates/sonicforge-audio",
    "crates/sonicforge-io",
    "apps/cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["SonicForge Studio contributors"]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
