[package]
name = "sonicforge-io"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
atomicwrites = "0.4.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sonicforge-core = { path = "../sonicforge-core" }
time = { version = "0.3", features = ["formatting"] }
zip = { version = "8.1", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3.27"
