[package]
name = "sonicforge-desktop"
version = "0.1.0"
description = "SonicForge Studio desktop shell"
authors = ["SonicForge Studio contributors"]
edition = "2021"
license = "MIT"
publish = false
build = "build.rs"

# Keep this shell independent until the root workspace explicitly adopts it.
[workspace]
resolver = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
sonicforge-audio = { path = "../../../crates/sonicforge-audio" }
sonicforge-core = { path = "../../../crates/sonicforge-core" }
sonicforge-io = { path = "../../../crates/sonicforge-io" }
tauri = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3.27"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
